--- a/py/BUILD.bazel
+++ b/py/BUILD.bazel
@@ -62,7 +62,7 @@ compile_pip_requirements(
     ],
 )
 
-SE_VERSION = "4.27.0.dev202410301443"
+SE_VERSION = "4.26.1"
 
 BROWSER_VERSIONS = [
     "v85",
