[grid] TomlConfig: migrate TOML library to tomlj/tomlj (#14470)
Co-authored-by: Puja Jagani <puja.jagani93@gmail.com>

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -199,7 +199,6 @@ maven.install(
         "io.opentelemetry:opentelemetry-sdk-testing:1.43.0",
         "io.opentelemetry:opentelemetry-sdk-trace:1.43.0",
         "io.opentelemetry.semconv:opentelemetry-semconv:1.25.0-alpha",
-        "io.ous:jtoml:2.0.0",
         "it.ozimov:embedded-redis:0.7.3",
         "net.bytebuddy:byte-buddy:1.15.10",
         "org.htmlunit:htmlunit-core-js:4.5.0",
@@ -221,6 +220,7 @@ maven.install(
         "org.redisson:redisson:3.37.0",
         "org.slf4j:slf4j-api:2.0.16",
         "org.slf4j:slf4j-jdk14:2.0.16",
+        "org.tomlj:tomlj:1.1.1",
         "org.zeromq:jeromq:0.6.0",
     ],
     excluded_artifacts = [
