--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -103,7 +103,11 @@ jobs:
           - browser: safari
             os: macos
           - browser: chrome
-            os: macos
+            os: ubuntu
+          - browser: edge
+            os: ubuntu
+          - browser: firefox
+            os: ubuntu
     with:
       name: Integration Tests (${{ matrix.browser }}, ${{ matrix.os }})
       browser: ${{ matrix.browser }}
