[py] add edge driver tests (#14723)
---------

Signed-off-by: Viet Nguyen Duc <nguyenducviet4496@gmail.com>
Co-authored-by: Viet Nguyen Duc <nguyenducviet4496@gmail.com>

--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -112,7 +112,7 @@ jobs:
       os: ${{ matrix.os }}
       cache-key: py-browser-${{ matrix.browser }}
       run: |
-        bazel test --flaky_test_attempts 3 //py:common-${{ matrix.browser }}-bidi
+        bazel test --local_test_jobs 1 --flaky_test_attempts 3 //py:common-${{ matrix.browser }}-bidi
         bazel test --local_test_jobs 1 --flaky_test_attempts 3 //py:test-${{ matrix.browser }}
 
   safari-tests:
