[grid] detect a client timeout while session creation #14743

--- a/java/test/org/openqa/selenium/grid/router/BUILD.bazel
+++ b/java/test/org/openqa/selenium/grid/router/BUILD.bazel
@@ -4,6 +4,7 @@ load("//java:version.bzl", "TOOLS_JAVA_VERSION")
 load("//java/src/org/openqa/selenium/devtools:versions.bzl", "CDP_DEPS")
 
 LARGE_TESTS = [
+    "DistributedTest.java",
     "DistributedCdpTest.java",
     "NewSessionCreationTest.java",
     "RemoteWebDriverDownloadTest.java",
