[py]: replace dead battery imghdr with filetype (#14771)

--- a/py/BUILD.bazel
+++ b/py/BUILD.bazel
@@ -74,6 +74,7 @@ BROWSER_VERSIONS = [
 TEST_DEPS = [
     requirement("attrs"),
     requirement("debugpy"),
+    requirement("filetype"),
     requirement("idna"),
     requirement("iniconfig"),
     requirement("importlib_metadata"),
