--- a/py/requirements.txt
+++ b/py/requirements.txt
@@ -4,6 +4,7 @@ certifi==2023.11.17
 cffi==1.16.0
 cryptography==42.0.8
 debugpy==1.8.7
+filetype==1.2.0
 h11==0.14.0
 idna==3.7
 importlib-metadata==6.8.0
