[py] Deprecate CDP methods on Firefox  (#14787)
Signed-off-by: Viet Nguyen Duc <nguyenducviet4496@gmail.com>

--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -100,8 +100,6 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - browser: safari
-            os: macos
           - browser: chrome
             os: ubuntu
           - browser: edge
@@ -115,4 +113,22 @@ jobs:
       cache-key: py-browser-${{ matrix.browser }}
       run: |
         bazel test --local_test_jobs 1 --flaky_test_attempts 3 //py:common-${{ matrix.browser }}-bidi
+        bazel test --local_test_jobs 1 --flaky_test_attempts 3 //py:test-${{ matrix.browser }}
+
+  safari-tests:
+    name: Browser Tests
+    needs: build
+    uses: ./.github/workflows/bazel.yml
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - browser: safari
+            os: macos
+    with:
+      name: Integration Tests (${{ matrix.browser }}, ${{ matrix.os }})
+      browser: ${{ matrix.browser }}
+      os: ${{ matrix.os }}
+      cache-key: py-browser-${{ matrix.browser }}
+      run: |
         bazel test --local_test_jobs 1 --flaky_test_attempts 3 //py:test-${{ matrix.browser }}
