--- a/py/requirements.txt
+++ b/py/requirements.txt
@@ -3,6 +3,7 @@ attrs==23.2.0
 certifi==2023.11.17
 cffi==1.16.0
 cryptography==42.0.8
+secretstorage==3.3.3
 debugpy==1.8.7
 filetype==1.2.0
 h11==0.14.0
