--- a/javascript/node/selenium-webdriver/BUILD.bazel
+++ b/javascript/node/selenium-webdriver/BUILD.bazel
@@ -11,7 +11,7 @@ load("//javascript/private:browsers.bzl", "BROWSERS")
 
 npm_link_all_packages(name = "node_modules")
 
-VERSION = "4.27.0"
+VERSION = "4.28.0-nightly202411252022"
 
 BROWSER_VERSIONS = [
     "v85",
