--- a/javascript/node/selenium-webdriver/package.json
+++ b/javascript/node/selenium-webdriver/package.json
@@ -1,6 +1,6 @@
 {
   "name": "selenium-webdriver",
-  "version": "4.27.0",
+  "version": "4.28.0-nightly202411252022",
   "description": "The official WebDriver JavaScript bindings from the Selenium project",
   "license": "Apache-2.0",
   "keywords": [
