[py] Fix `pyproject.toml` for installable from sdist (#14806)
* [ci][py] Add rules validate-pyproject

Signed-off-by: Viet Nguyen Duc <nguyenducviet4496@gmail.com>

* [py] Bump version to 4.27.1

Signed-off-by: Viet Nguyen Duc <nguyenducviet4496@gmail.com>

* Update CHANGELOG

Signed-off-by: Viet Nguyen Duc <nguyenducviet4496@gmail.com>

---------

Signed-off-by: Viet Nguyen Duc <nguyenducviet4496@gmail.com>
Co-authored-by: Diego Molina <diemol@users.noreply.github.com>

--- a/py/tox.ini
+++ b/py/tox.ini
@@ -1,5 +1,13 @@
 [tox]
-envlist = docs, flake8, isort
+envlist = docs, flake8, isort, validate-pyproject
+
+[testenv:validate-pyproject]
+skip_install = true
+deps =
+  validate-pyproject==0.23
+  packaging==24.2
+commands =
+  validate-pyproject ./pyproject.toml
 
 [testenv:docs]
 skip_install = true
@@ -7,10 +15,10 @@ deps =
   -r {toxinidir}/docs/requirements.txt
   -r {toxinidir}/requirements.txt
 
-commands = 
+commands =
   ; regenerate autodoc stub pages
   sphinx-autogen docs/source/api.rst
-  ; build api docs 
+  ; build api docs
   sphinx-build -b html -d ../build/docs/doctrees docs/source ../build/docs/api/py {posargs}
 setenv =
   PYTHONPATH = {toxinidir}/.
