[py] Moved Rust binary settings to `pyproject.toml` from `setup.py` (#14837)
* Moved Rust binary settings to pyproject.toml from setup.py
* Update Rakefile to remove py/setup.py

---------

Co-authored-by: Viet Nguyen Duc <nguyenducviet4496@gmail.com>

--- a/py/pyproject.toml
+++ b/py/pyproject.toml
@@ -44,6 +44,9 @@ exclude = ["test*"]
 namespaces = false
 # include-package-data is `true` by default in pyproject.toml
 
+[[tool.setuptools-rust.bins]]
+target = "selenium.webdriver.common.selenium-manager"
+
 [project.urls]
 Repository = "https://github.com/SeleniumHQ/selenium/"
 BugTracker = "https://github.com/SeleniumHQ/selenium/issues"
