--- a/.bazelrc
+++ b/.bazelrc
@@ -30,9 +30,11 @@ build --tool_java_runtime_version=remotejdk_17
 build --javacopt="--release 11"
 
 # Require java dependencies to be used and first-order
-
 build --experimental_strict_java_deps=strict
 build --explicit_java_test_deps
+
+# Avoid ErrorProne getting annoyed about "impossible null checks"
+build --javacopt="-Xep:ImpossibleNullComparison:OFF"
 
 # Allow spaces in runfile paths
 build --nobuild_runfile_links
@@ -54,6 +56,11 @@ query --@aspect_rules_ts//ts:default_to_tsc_transpiler
 # Ensure builds are unpolluted by the user env
 
 build --incompatible_strict_action_env
+
+# Required to get `protobuf` compiling, which is required for `rules_closure`
+build --incompatible_enable_cc_toolchain_resolution
+build --cxxopt=-std=c++14
+build --host_cxxopt=-std=c++14
 
 # For build stamping
 
