--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -36,6 +36,8 @@ debpkg = "0.6.0"
 anyhow = { version = "1.0.94", default-features = false, features = ["backtrace", "std"] }
 apple-flat-package = "0.20.0"
 which = "7.0.0"
+fs2 = "0.4.3"
+fs_extra = "1.3.0"
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
