Automate dependencies repins for Renovate PRs (#14709)
Co-authored-by: Viet Nguyen Duc <nguyenducviet4496@gmail.com>

--- a/.github/workflows/bazel.yml
+++ b/.github/workflows/bazel.yml
@@ -82,6 +82,9 @@ jobs:
     steps:
       - name: Checkout source tree
         uses: actions/checkout@v4
+      - name: Pull latest changes
+        if: startsWith(github.head_ref, 'renovate/')
+        run: git pull origin ${{ github.head_ref }}
       - name: Free space
         if: inputs.os != 'windows'
         run: ./scripts/github-actions/free-disk-space.sh
