--- a/renovate.json
+++ b/renovate.json
@@ -1,36 +1,82 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended"],
-  "labels": ["dependencies"],
   "packageRules": [
     {
-      "matchPackageNames": ["bazel", "bazelisk"],
-      "commitMessageSuffix": "[dotnet][java][js][py][rb][rust]"
+      "matchManagers": [ "bazel", "bazel-module", "bazelisk" ],
+      "matchPackageNames": [ "!rules_java", "!rules_jvm_external", "!contrib_rules_jvm", "!rules_dotnet", "!aspect_rules_js", "!aspect_rules_ts", "!rules_nodejs", "!rules_python", "!rules_ruby", "!rules_cc" ],
+      "matchDatasources": [ "!maven" ],
+      "commitMessagePrefix": "[dotnet][java][js][py][rb][rust]",
+      "labels": [ "dependencies", "c-build" ]
     },
     {
-      "matchPackageNames": ["nuget"],
-      "commitMessagePrefix": "[dotnet]"
+      "matchManagers": [ "nuget" ],
+      "commitMessagePrefix": "[dotnet]",
+      "labels": [ "dependencies", "c-dotnet" ]
     },
     {
-      "matchPackageNames": ["maven"],
-      "commitMessagePrefix": "[java]"
+      "matchPackageNames": [ "rules_dotnet" ],
+      "commitMessagePrefix": "[dotnet]",
+      "labels": [ "dependencies", "c-dotnet" ]
     },
     {
-      "matchPackageNames": ["npm"],
-      "commitMessagePrefix": "[js]"
+      "matchManagers": [ "bazel", "bazel-module" ],
+      "matchDatasources": ["maven"],
+      "versioning": "maven",
+      "commitMessagePrefix": "[java]",
+      "labels": [ "dependencies", "c-java" ]
     },
     {
-      "matchPackageNames": ["pip_requirements"],
-      "commitMessagePrefix": "[py]"
+      "matchManagers": [ "bazel-module" ],
+      "matchPackageNames": [ "rules_java", "rules_jvm_external", "contrib_rules_jvm" ],
+      "commitMessagePrefix": "[java]",
+      "labels": [ "dependencies", "c-java" ]
     },
     {
-      "matchPackageNames": ["bundler", "ruby-version"],
-      "commitMessagePrefix": "[rb]"
+      "matchManagers": [ "maven" ],
+      "commitMessagePrefix": "[java]",
+      "labels": [ "dependencies", "c-java" ]
     },
     {
-      "matchPackageNames": ["cargo"],
-      "commitMessagePrefix": "[rust]"
+      "matchManagers": [ "npm" ],
+      "commitMessagePrefix": "[js]",
+      "labels": [ "dependencies", "c-nodejs" ]
+    },
+    {
+      "matchPackageNames": [ "aspect_rules_js", "aspect_rules_ts", "rules_nodejs" ],
+      "commitMessagePrefix": "[js]",
+      "labels": [ "dependencies", "c-nodejs" ]
+    },
+    {
+      "matchManagers": [ "pip_requirements", "pip_setup" ],
+      "commitMessagePrefix": "[py]",
+      "labels": [ "dependencies", "c-py" ]
+    },
+    {
+      "matchPackageNames": [ "rules_python" ],
+      "commitMessagePrefix": "[py]",
+      "labels": [ "dependencies", "c-py" ]
+    },
+    {
+      "matchManagers": [ "bundler", "ruby-version" ],
+      "commitMessagePrefix": "[rb]",
+      "labels": [ "dependencies", "c-rb" ]
+    },
+    {
+      "matchPackageNames": [ "rules_ruby" ],
+      "commitMessagePrefix": "[rb]",
+      "labels": [ "dependencies", "c-rb" ]
+    },
+    {
+      "matchManagers": [ "cargo" ],
+      "commitMessagePrefix": "[rust]",
+      "labels": [ "dependencies", "c-rust" ]
+    },
+    {
+      "matchPackageNames": [ "rules_cc" ],
+      "commitMessagePrefix": "[rust]",
+      "labels": [ "dependencies", "c-rust" ]
     }
   ],
-  "prConcurrentLimit": 5
+  "prConcurrentLimit": 10
 }
